[package]
name = "pomo"
version = "0.1.0"
authors = ["eleijonmarck <eric.leijonmarck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
lazy_static = "1.4.0"
notify-rust = "4"
num = "0.3"
rodio = "0.13.0"
tui = { version = "0.14", default-features = false, features = ["crossterm"] }

# telegram bot
teloxide = { version = "0.5", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

